# El-DT-Agent-Army

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  RESUMEN_EJECUTIVO.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: CLAUDE.md
.cursor/commands/: dt-start.md  github-save.md
.cursor/rules/: dt-activation.md  dt-rules.md
.github/workflows/: ci.yml  deploy.yml
.taskmaster_example/docs/: prd.txt
.taskmaster_example/tasks/done/: task_d11b2ce3.json
.taskmaster_example/tasks/pending/: task_b02a6ed5.json  task_f3d91cc4.json
docs/: ARCHITECTURE.md  AUTONOMOUS_LOOPS.md  CHANGELOG.md  COMPLETENESS_CHECKLIST.md  COST_MANAGEMENT.md  DEPLOYMENT.md  DT_COMMUNICATION_GUIDELINES.md  EJEMPLO_ENFOQUE_SIMPLIFICADO.md  ENFOQUE_SIMPLIFICADO.md  FAQ.md  IDE_CONFIGURATION.md  INDEX.md  INTEGRATION.md  MCP_CONFIGURATION.md  MCP_SERVER_TROUBLESHOOTING.md  MCP_TASKMASTER_COMPARISON.md  MONITORING.md  PLANNING_AGENTS.md  PROJECT_FILES_EXPLAINED.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_SEPARATION.md  PROTOCOL.md  QUICK_START.md  RALPH_INTEGRATION_PROPOSAL.md  RALPH_INTEGRATION_V2.md  README.md  README_DEVELOPMENT.md  REQUIREMENTS.md  RESUMEN_COMPARACION.md  RESUMEN_EJECUTIVO.md  ROLES.md  SECURITY.md  SPECIFICATIONS_V2.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/archive/: CREWAI_LEARNINGS.md  DT_AUTONOMY.md  IMPLEMENTATION_PLAN.md  INDEX.md  INSPIRATION.md  PLAN_REVIEW.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_PLAN.md  RESEARCH.md  SPECIFICATIONS.md  TASKMASTER_RULES_INTEGRATION.md
examples/: agents_config.yaml  basic_agent_example.py  basic_message_example.py  complete_app_example.py  dt_example.py  memory_example.py  planning_agents_example.py  specialized_agents_example.py  tools_example.py
scripts/: check_mcp_config.py  setup_mcp_config.py
skills/: dt-start.md  github-sync.md
src/agents_army/: __init__.py
src/agents_army/agents/: __init__.py  backend_architect.py  brand_guardian.py  content_creator.py  development_planner.py  devops_automator.py  dt.py  feedback_synthesizer.py  frontend_developer.py  growth_hacker.py  marketing_strategist.py  operations_maintainer.py  pitch_specialist.py  prd_creator.py  product_strategist.py  qa_tester.py  researcher.py  srd_creator.py  storytelling_specialist.py  ui_designer.py  ux_researcher.py
src/agents_army/api/: __init__.py  health.py
src/agents_army/core/: __init__.py  agent.py  autonomous_executor.py  autonomy.py  circuit_breaker.py  completion.py  config.py  file_detector.py  models.py  progress_tracker.py  registry.py  rules.py  session_manager.py  system.py  task_decomposer.py  task_scheduler.py  task_storage.py  validation.py
src/agents_army/cost/: __init__.py  alerts.py  estimator.py  tracker.py
src/agents_army/mcp/: __init__.py  __main__.py  client.py  models.py  server.py
src/agents_army/memory/: __init__.py  backend.py  embeddings.py  (+4 more)
tests/: __init__.py  conftest.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_autonomous_loops.py  test_backward_compatibility.py  test_mcp_integration.py  test_message_flow.py
tests/unit/: test_agent.py  test_autonomous_executor.py  test_autonomy.py  test_autonomy_integration.py  test_circuit_breaker.py  test_completion.py  test_config.py  test_cost_tracker.py  test_dt.py  test_dt_advanced.py  test_mcp.py  test_memory.py  test_message.py  test_observability.py  test_progress_tracker.py  test_registry.py  test_security.py  test_serializer.py  test_session_manager.py  test_specialized_agents.py  test_system.py  test_tools.py  test_vector_backend.py  test_version.py
(+15 files in other folders)
